--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,7 +1,7 @@
-<!-- <div *ngif = "dataLoaded==false" class="spinner-border text-secondary" role="status">
+<div *ngIf="dataLoaded==false" class="spinner-border text-dark" role="status">
     <span class="visually-hidden">Loading...</span>
-</div> -->
-<table  class="table">
+</div>
+  <table *ngIf="dataLoaded==true" class="table">
     <thead>
         <tr>
             <th>Id</th>
