--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -4,8 +4,6 @@
     <li (click)="setCurrentCategory(category)" 
     routerLink = "/products/category/{{category.categoryId}}"
     *ngFor="let category of categories" 
-    [class]="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
-
-    
+    [class]="getCurrentCategoryClass(category)">{{category.categoryName }}</li>
 </ul>
-<h5 *ngIf="currentCategory">{{currentCategory.categoryName}} seçtiniz</h5>
+<h5 *ngIf="currentCategory">{{currentCategory.categoryName |uppercase}} seçtiniz</h5>
